# shared/types/apiSchema.ts
@@ -9,6 +9,17 @@ export interface paths {
     /** Create a new user */
     post: {
       parameters: {};
+      responses: {
+        /** @description User created */
+        201: {
+          headers: {
+            [name: string]: unknown;
+          };
+          content: {
+            'application/json': components['schemas']['Success'];
+          };
+        };
+      };
     };
   };
   '/me': {
@@ -28,6 +39,98 @@ export interface paths {
         };
       };
     };
+    /** Update current user */
+    patch: {
+      parameters: {};
+      requestBody: {
+        content: {
+          'application/json': {
+            name: string;
+          };
+        };
+      };
+      responses: {
+        /** @description User updated */
+        201: {
+          headers: {
+            [name: string]: unknown;
+          };
+          content: {
+            'application/json': components['schemas']['Success'];
+          };
+        };
+      };
+    };
+  };
+  '/challenges': {
+    parameters: {};
+    /** Get all challenges */
+    get: {
+      parameters: {};
+      responses: {
+        /** @description Challenges found */
+        200: {
+          headers: {
+            [name: string]: unknown;
+          };
+          content: {
+            'application/json': components['schemas']['Challenge'][];
+          };
+        };
+      };
+    };
+    /** Create a new challenge */
+    post: {
+      parameters: {};
+      requestBody: {
+        content: {
+          'application/json': {
+            title: string;
+            description: string;
+            /** Format: date */
+            targetDate: string;
+            /** @enum {string} */
+            status: 'draft' | 'active';
+          };
+        };
+      };
+      responses: {
+        /** @description Challenge created */
+        201: {
+          headers: {
+            [name: string]: unknown;
+          };
+          content: {
+            'application/json': components['schemas']['Success'];
+          };
+        };
+      };
+    };
+  };
+  '/challenge_members': {
+    parameters: {};
+    /** Join a challenge */
+    post: {
+      parameters: {};
+      requestBody: {
+        content: {
+          'application/json': {
+            challengeId: string;
+          };
+        };
+      };
+      responses: {
+        /** @description Challenge joined */
+        201: {
+          headers: {
+            [name: string]: unknown;
+          };
+          content: {
+            'application/json': components['schemas']['Success'];
+          };
+        };
+      };
+    };
   };
 }
 export type webhooks = Record<string, never>;
@@ -36,6 +139,18 @@ export interface components {
     User: {
       id: string;
       name: string;
+    };
+    Challenge: {
+      id: string;
+      name: string;
+      description: string;
+      /** Format: date */
+      targetDate: string;
+      /** @enum {string} */
+      status: 'draft' | 'active' | 'completed';
+    };
+    Success: {
+      success: boolean;
     };
   };
 }
